tests/suite/similar-names/fail/simfail02.hs
{-# LANGUAGE TypeFamilies #-}

data family A a

data instance A Int = Ba Int

data AB = BA

main = return ()
